# HyParse

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test.json  test.py
.github/workflow/: test.yml
.github/workflows/: test.yml
hyparse/: Player.py  Skyblock.py  __init__.py
hyparse/dependencies/nbt-parser/: nbt.h  nbt_impl.c
hyparse/exceptions/: __init__.py  exceptions.py
hyparse/levels/: Levels.py  levels.cpp
hyparse/levels/json/: levels.json
hyparse/player/: Inventory.py  __init__.py
hyparse/player/Inventory/: Inventory.py  NBT.py
hyparse/skills/: __init__.py
hyparse/skills/Dungeons/: Catacombs.py  Dungeons.py  Master_Catacombs.py  __init__.py
hyparse/utils/: __init__.py  nbt_parser.cpp  nbt_parser.hpp  utils.py
hyparse_stubs/levels/: Levels.pyi
tests/: test.json  test_Player.py
tests/json/: test_Player.json
tests/utils/: test_utils.py
